# ucvm

./: .gitignore  CHANGELOG.md  CITATION.cff  CITATION2.cff  CONTRIBUTING.md  CREDITS.md  ChangeLog  ChangeLog.md  LICENSE  LICENSE.md  LICENSE.txt  MODULES.md  Makefile.am  README.md  aclocal.m4  codemeta.json  configure.ac  ucvm_setup.py
.github/actions/: action.yml  action.yml.orig  action_cvmhlabn.yml  action_ucvm.yml  action_ucvm_basin.yml  ucvm-build-cvmh-py2.yml  ucvm-build-cvmh-py3.yml  ucvm-build-cvmh-py3.yml.orig
.github/scripts/: run-build-albacore-lsu-wf.sh  run-build-cencal-cvms.sh  ucvm-build-cvmh.sh  ucvm-build-cvmh.sh.orig  ucvm-build-cvmhlabn.sh  ucvm-build-cvms-cvmh.sh  ucvm-build-none.sh  ucvm-build-wfcvm.sh  ucvm-build.sh
.github/workflows/: ucvm-ci-mac.yml  ucvm-ci.yml  ucvm-ci.yml.orig  ucvm-ci_old.yml  ucvm-dev-ci.yml  ucvm.yml
conf/: Makefile.am  ucvm_template.conf
conf/template/: ucvm.conf
docs/: README.html  README.rst
documentation/: Installation.md  UCVM_Coverage_Region_v12_10.kml  UCVM_Coverage_Regions_v22_7.kml
examples/: Makefile.am
examples/api/: Makefile.am  query_1d_gtl.c
examples/mpi/frontier/: README.md  la_habra_cvmsi.conf  la_habra_mesh.slurm  run_la_habra_mesh
examples/mpi/frontier/basin_test/: basin_test.sl  basin_test_compare.sh
examples/mpi/frontier/examples/: run_basin_query_mpi_cvms5.sh  test_list.txt
examples/mpi/frontier/la_habra/: lahabra_20m.conf  lahabra_20m.md  lahabra_20m.sl
examples/mpi/frontier/single_node/: run_basin_query_mpi_cvms5.sh  single_node.sl
examples/mpi/frontier/titan_mesh/: titan_mesh.conf  titan_mesh.sl
examples/mpi/stampede3/: README.md  la_habra_cvmsi.conf  lahabra_200m.conf  lahabra_20m.conf  large.slurm  tiny.slurm  twotasks_onenode.slurm  twotasks_twonodes.slurm  ucvm_layers.slurm  ucvm_mpi.slurm
examples/mpi/summit/: README.md  roten.conf  roten.lsf
examples/programs/basin/: Makefile.am  run_basin_query_cvmsi_taper.sh  run_basin_query_mpi_cencal_cvms.sh  run_basin_query_mpi_cencal_cvmsi.sh  run_basin_query_mpi_complete_cencal_cvms.sh  run_basin_query_mpi_complete_cencal_cvms5.sh  run_basin_query_mpi_complete_cencal_cvmsi.sh  run_basin_query_mpi_complete_cvms5_taper.sh  run_basin_query_mpi_complete_cvmsi_taper.sh  run_basin_query_mpi_complete_sfcvm_cvms.sh  run_basin_query_mpi_complete_sfcvm_cvms5.sh  run_basin_query_mpi_complete_sfcvm_cvmsi.sh  run_basin_query_mpi_cvms5.sh  run_basin_query_mpi_cvmsi_taper.sh  run_basin_query_mpi_sfcvm_cvms.sh  run_basin_query_mpi_sfcvm_cvmsi.sh
examples/programs/etree/: Makefile.am  run_ucvm2etree_cvmh.sh  run_ucvm2etree_cvmh_macos.sh
examples/programs/mesh/: Makefile.am  la_habra_cvms.conf_template  la_habra_cvmsi.conf_template  run_ucvm2mesh_cca.sh  run_ucvm2mesh_cvmh.sh  run_ucvm2mesh_cvms5.h  run_ucvm2mesh_cvms5.sh  run_ucvm2mesh_cvms5_ci.sh  run_ucvm2mesh_mpi_cvmh.sh  run_ucvm2mesh_mpi_cvmsi.sh  run_ucvm2mesh_mpi_layer_cvms.sh  run_ucvm2mesh_mpi_layer_cvmsi.sh  run_ucvm2mesh_mpi_layer_sfcvm.sh  run_ucvm2mesh_mpi_sfcvm.sh  run_ucvm2mesh_mpi_sfvm.sh  run_ucvm2mesh_sfcvm.sh  small_cvmh.conf_template  small_cvms5.conf_template  small_cvmsi.conf_template  southbay_cca.conf_template  southbay_sfcvm.conf_template
examples/programs/surface/: Makefile.am  run_ucvm2surface_cvms5.sh  run_ucvm2surface_cvms5_c.sh
examples/programs/ucvm/: Makefile.am  run_ucvm_query_albacore.sh  run_ucvm_query_albacore_c.sh  run_ucvm_query_canvas.sh  run_ucvm_query_cca.sh  run_ucvm_query_cca_c.sh  run_ucvm_query_cencal.sh  run_ucvm_query_cencal_c.sh  run_ucvm_query_cencal_cvms.sh  run_ucvm_query_cencal_cvms5.sh  run_ucvm_query_cs248.sh  run_ucvm_query_cvlsu.sh  run_ucvm_query_cvlsu_c.sh  run_ucvm_query_cvmh.sh  run_ucvm_query_cvmh_c.sh  run_ucvm_query_cvmhibbn.sh  run_ucvm_query_cvmhibbn_c.sh  run_ucvm_query_cvmhlabn.sh  run_ucvm_query_cvmhlabn_c.sh  run_ucvm_query_cvmhrbn.sh  run_ucvm_query_cvmhrbn_c.sh  run_ucvm_query_cvmhsbbn.sh  run_ucvm_query_cvmhsbbn_c.sh  run_ucvm_query_cvmhsbcbn.sh  run_ucvm_query_cvmhsbcbn_c.sh  run_ucvm_query_cvmhsgbn.sh  run_ucvm_query_cvmhsgbn_c.sh  run_ucvm_query_cvmhsmbn.sh  run_ucvm_query_cvmhsmbn_c.sh  run_ucvm_query_cvmhstbn.sh  run_ucvm_query_cvmhstbn_c.sh  run_ucvm_query_cvmhvbn.sh  run_ucvm_query_cvmhvbn_c.sh  run_ucvm_query_cvms.sh  run_ucvm_query_cvms5.sh  run_ucvm_query_cvms5_c.sh  run_ucvm_query_cvms_c.sh  run_ucvm_query_cvms_sfcvm.sh  run_ucvm_query_cvmsi.sh  run_ucvm_query_cvmsi_c.sh  (+15 more)
largefiles/: README  albacore.tar.gz.md5  cencal.tar.gz.md5  check_largefiles_md5.py  cvlsu.tar.gz.md5  cvmh.tar.gz.md5  cvms.tar.gz.md5  cvms5.tar.gz.md5  cvmsi.tar.gz.md5  get_large_files.py  get_largefiles.py  ivlsu.tar.gz.md5  stage_large_files.py  stage_largefiles.py  ucvm_utah.e.md5  wfcvm.tar.gz.md5
m4/: scec_check_usc_discovery_host.m4
setup/: note  setup.list  setup.list.orig
src/ucvm/: Makefile.am  brad_ucvm_grid.c  brad_ucvm_proj_ucvm.c  brad_ucvm_proj_ucvm.h  run_ucvm_query.sh  test_svm.c  test_ucvm.c  ucvm.c  ucvm.h  ucvm_config.c  ucvm_config.h  ucvm_dtypes.h  ucvm_grid.c  ucvm_grid.h  ucvm_interp.c  ucvm_interp.h  ucvm_map.c  ucvm_map.h  ucvm_meta_etree.c  ucvm_model_1d.c  ucvm_model_1dgtl.c  ucvm_model_bbp1d.c  ucvm_model_cencal.c  ucvm_model_cmrg.c  ucvm_model_cmuetree.c  ucvm_model_cvmh.c  ucvm_model_cvmh.h  ucvm_model_cvmlt.c  ucvm_model_cvmnci.c  ucvm_model_dtypes.h  ucvm_model_elygtl.c  ucvm_model_etree.c  ucvm_model_japan.c  ucvm_model_muscal1d.c  ucvm_model_muscal1d.h  ucvm_model_nc1d.c  ucvm_model_nc1d.h  ucvm_model_patch.c  ucvm_model_plugin.c  ucvm_model_plugin.h  (+9 more)
src/ucvm2mesh/: Makefile.am  NOTE  grid4corners.c  latlon2utm.c  mesh2csv.c  mesh2hdf5.c  mesh2hdf5.conf  mesh2netcdf.c  mesh_check.c  mesh_translate.c  ucvm2mesh.c  ucvm2mesh.conf  ucvm2mesh_mpi.c  ucvm2mesh_mpi_layer.c  um_hdf5.c  um_hdf5.h  um_hdf5_2.c  um_mesh.c  um_mpi.c
test/: Makefile.am  accept_test.py  accepttest_suite_grid.c  unittest_suite_lib.c
utilities/: Makefile.am  installed_models  make_mesh_model.py  run_ucvm.sh  run_ucvm_query.sh  setup_epsg.sh  time_mesh_generation  time_mesh_generation.py  ucvm_query_diff.sh
(+77 files in other folders)
