# Autoconf/Automake binaries and headers
#
#
bin_PROGRAMS=

if UCVM_AM_ENABLE_CVMH
bin_PROGRAMS += run_ucvm_query_cvmh.sh
run_ucvm_query_cvmh_sh_SOURCES = run_ucvm_query_cvmh.sh
bin_PROGRAMS += run_ucvm_query_cvmh_c.sh
run_ucvm_query_cvmh_c_sh_SOURCES = run_ucvm_query_cvmh_c.sh
endif

if UCVM_AM_ENABLE_CVMHIBBN
bin_PROGRAMS += run_ucvm_query_cvmhibbn.sh
run_ucvm_query_cvmhibbn_sh_SOURCES = run_ucvm_query_cvmhibbn.sh
bin_PROGRAMS += run_ucvm_query_cvmhibbn_c.sh
run_ucvm_query_cvmhibbn_c_sh_SOURCES = run_ucvm_query_cvmhibbn_c.sh
endif

if UCVM_AM_ENABLE_CVMHRBN
bin_PROGRAMS += run_ucvm_query_cvmhrbn.sh
run_ucvm_query_cvmhrbn_sh_SOURCES = run_ucvm_query_cvmhrbn.sh
bin_PROGRAMS += run_ucvm_query_cvmhrbn_c.sh
run_ucvm_query_cvmhrbn_c_sh_SOURCES = run_ucvm_query_cvmhrbn_c.sh
endif

if UCVM_AM_ENABLE_CVMHSBBN
bin_PROGRAMS += run_ucvm_query_cvmhsbbn.sh
run_ucvm_query_cvmhsbbn_sh_SOURCES = run_ucvm_query_cvmhsbbn.sh
bin_PROGRAMS += run_ucvm_query_cvmhsbbn_c.sh
run_ucvm_query_cvmhsbbn_c_sh_SOURCES = run_ucvm_query_cvmhsbbn_c.sh
endif

if UCVM_AM_ENABLE_CVMHSBCBN
bin_PROGRAMS += run_ucvm_query_cvmhsbcbn.sh
run_ucvm_query_cvmhsbcbn_sh_SOURCES = run_ucvm_query_cvmhsbcbn.sh
bin_PROGRAMS += run_ucvm_query_cvmhsbcbn_c.sh
run_ucvm_query_cvmhsbcbn_c_sh_SOURCES = run_ucvm_query_cvmhsbcbn_c.sh
endif

if UCVM_AM_ENABLE_CVMHSMBN
bin_PROGRAMS += run_ucvm_query_cvmhsmbn.sh
run_ucvm_query_cvmhsmbn_sh_SOURCES = run_ucvm_query_cvmhsmbn.sh
bin_PROGRAMS += run_ucvm_query_cvmhsmbn_c.sh
run_ucvm_query_cvmhsmbn_c_sh_SOURCES = run_ucvm_query_cvmhsmbn_c.sh
endif

if UCVM_AM_ENABLE_CVMHSTBN
bin_PROGRAMS += run_ucvm_query_cvmhstbn.sh
run_ucvm_query_cvmhstbn_sh_SOURCES = run_ucvm_query_cvmhstbn.sh
bin_PROGRAMS += run_ucvm_query_cvmhstbn_c.sh
run_ucvm_query_cvmhstbn_c_sh_SOURCES = run_ucvm_query_cvmhstbn_c.sh
endif

if UCVM_AM_ENABLE_CVMHVBN
bin_PROGRAMS += run_ucvm_query_cvmhvbn.sh
run_ucvm_query_cvmhvbn_sh_SOURCES = run_ucvm_query_cvmhvbn.sh
bin_PROGRAMS += run_ucvm_query_cvmhvbn_c.sh
run_ucvm_query_cvmhvbn_c_sh_SOURCES = run_ucvm_query_cvmhvbn_c.sh
endif

if UCVM_AM_ENABLE_CVMHLABN
bin_PROGRAMS += run_ucvm_query_cvmhlabn.sh
run_ucvm_query_cvmhlabn_sh_SOURCES = run_ucvm_query_cvmhlabn.sh
bin_PROGRAMS += run_ucvm_query_cvmhlabn_c.sh
run_ucvm_query_cvmhlabn_c_sh_SOURCES = run_ucvm_query_cvmhlabn_c.sh
endif

if UCVM_AM_ENABLE_CVMHSGBN
bin_PROGRAMS += run_ucvm_query_cvmhsgbn.sh
run_ucvm_query_cvmhsgbn_sh_SOURCES = run_ucvm_query_cvmhsgbn.sh
bin_PROGRAMS += run_ucvm_query_cvmhsgbn_c.sh
run_ucvm_query_cvmhsgbn_c_sh_SOURCES = run_ucvm_query_cvmhsgbn_c.sh
endif

if UCVM_AM_ENABLE_CCA
bin_PROGRAMS += run_ucvm_query_cca.sh
run_ucvm_query_cca_sh_SOURCES = run_ucvm_query_cca.sh
bin_PROGRAMS += run_ucvm_query_cca_c.sh
run_ucvm_query_cca_c_sh_SOURCES = run_ucvm_query_cca_c.sh
endif

if UCVM_AM_ENABLE_CVLSU
bin_PROGRAMS += run_ucvm_query_cvlsu.sh
run_ucvm_query_cvlsu_sh_SOURCES = run_ucvm_query_cvlsu.sh
bin_PROGRAMS += run_ucvm_query_cvlsu_c.sh
run_ucvm_query_cvlsu_c_sh_SOURCES = run_ucvm_query_cvlsu_c.sh
endif

if UCVM_AM_ENABLE_IVLSU
bin_PROGRAMS += run_ucvm_query_ivlsu.sh
run_ucvm_query_ivlsu_sh_SOURCES = run_ucvm_query_ivlsu.sh
bin_PROGRAMS += run_ucvm_query_ivlsu_c.sh
run_ucvm_query_ivlsu_c_sh_SOURCES = run_ucvm_query_ivlsu_c.sh
endif

if UCVM_AM_ENABLE_WFCVM
bin_PROGRAMS += run_ucvm_query_wfcvm.sh
run_ucvm_query_wfcvm_sh_SOURCES = run_ucvm_query_wfcvm.sh
bin_PROGRAMS += run_ucvm_query_wfcvm_c.sh
run_ucvm_query_wfcvm_c_sh_SOURCES = run_ucvm_query_wfcvm_c.sh
endif

if UCVM_AM_ENABLE_ALBACORE
bin_PROGRAMS += run_ucvm_query_albacore.sh
run_ucvm_query_albacore_sh_SOURCES = run_ucvm_query_albacore.sh
bin_PROGRAMS += run_ucvm_query_albacore_c.sh
run_ucvm_query_albacore_c_sh_SOURCES = run_ucvm_query_albacore_c.sh
endif

if UCVM_AM_ENABLE_CVMSI
bin_PROGRAMS += run_ucvm_query_cvmsi.sh
run_ucvm_query_cvmsi_sh_SOURCES = run_ucvm_query_cvmsi.sh
bin_PROGRAMS += run_ucvm_query_cvmsi_c.sh
run_ucvm_query_cvmsi_c_sh_SOURCES = run_ucvm_query_cvmsi_c.sh
endif

if UCVM_AM_ENABLE_CVMS
bin_PROGRAMS += run_ucvm_query_cvms.sh
run_ucvm_query_cvms_sh_SOURCES = run_ucvm_query_cvms.sh
bin_PROGRAMS += run_ucvm_query_cvms_c.sh
run_ucvm_query_cvms_c_sh_SOURCES = run_ucvm_query_cvms_c.sh
endif

if UCVM_AM_ENABLE_CVMS5
bin_PROGRAMS += run_ucvm_query_cvms5.sh
run_ucvm_query_cvms5_sh_SOURCES = run_ucvm_query_cvms5.sh
bin_PROGRAMS += run_ucvm_query_cvms5_c.sh
run_ucvm_query_cvms5_c_sh_SOURCES = run_ucvm_query_cvms5_c.sh
endif

if UCVM_AM_ENABLE_CENCAL 
bin_PROGRAMS += run_ucvm_query_cencal.sh
run_ucvm_query_cencal_sh_SOURCES = run_ucvm_query_cencal.sh
bin_PROGRAMS += run_ucvm_query_cencal_c.sh
run_ucvm_query_cencal_c_sh_SOURCES = run_ucvm_query_cencal_c.sh
if UCVM_AM_ENABLE_CVMS5
bin_PROGRAMS += run_ucvm_query_cencal_cvms5.sh
run_ucvm_query_cencal_cvms5_sh_SOURCES = run_ucvm_query_cencal_cvms5.sh
endif
if UCVM_AM_ENABLE_CVMS
bin_PROGRAMS += run_ucvm_query_cencal_cvms.sh
run_ucvm_query_cencal_cvms_sh_SOURCES = run_ucvm_query_cencal_cvms.sh
endif
endif


all: $(bin_PROGRAMS)
############################################
# Special build targets
############################################
check: $(bin_PROGRAMS)
	@( cd ${prefix}/tests/ucvm; \
	for i in $(bin_PROGRAMS); do \
		./$${i}; \
	done \
	)

install: $(bin_PROGRAMS)
	mkdir -p ${prefix}/tests/ucvm
	for i in $(bin_PROGRAMS); do \
		cp $${i} ${prefix}/tests/ucvm; \
		echo "(cd ucvm; ./$${i})" >> ${prefix}/tests/run-testing; \
	done

clean: 
	rm -f *.o *~


